[project]
name = "demo-safety-taxonomy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.8.4",
    "fastparquet>=2026.3.0",
    "hdbscan>=0.8.42",
    "huggingface-hub>=1.8.0",
    "joblib>=1.5.3",
    "nbformat>=5.10.4",
    "numba>=0.65.0",
    "openai>=2.30.0",
    "pandas>=3.0.2",
    "plotly>=6.6.0",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
    "umap-learn>=0.5.11",
]
